# sous_chef_rs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
app/: Cargo.toml  input.css
app/assets/: tailwind.css
app/src/: main.rs
app/src/components/: echo.rs  hero.rs  navbar.rs
app/src/views/: blog.rs  home.rs
server/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
