[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
